Improve dependency version management